# DataLab

./: .gitignore  README.md  dev.sh  justfile  populate.py  test_wrapper.py
backend/: .gitignore  Cargo.toml
backend/.sqlx/: query-066ef4daf15ee15280f09e10394d56d24e8c16b76e33634533c3e272cce70dc4.json  query-0bc68be593c7f2ba1f7dd92c2500c8999331c3e9f5bd776c8a0a7c1348300f05.json  query-117f5e6ea831f91f3ab7d00f7529a183ec85ead601605b66ec286a821ad8dbde.json  query-1715d47661a657af72306b3bfa021f6c3c04e1a9804fadae6f9adfbaee6c289c.json  query-19ea005c135e415092fb0469d1973b067f33b6c1c4777d12d150c7593fedd1cb.json  query-1b35c605879c00b3b2bd1ed836e0c9f9ed720760b6207a85d798b32e06ced0a2.json  query-1c0a1235b02e80251f8cb37c823c16d756507f3c02cea9961209163d9604b879.json  query-1e0a259c57bdc997cdd3aa8aeda95d68b446201612cd13e56981b239e18c7b5c.json  query-1e9f77d2feb43d566c3b09e6fc838d9ef3f288bf9ea88fd1fa89f3cbd3c088c5.json  query-1f4a976f46b8ab3e8978dabcb442385e180b82c40ba8e404f2605ac39341cdc5.json  query-25d9cb58d1bdac49f57def6fd765edc4161a642bf321454735db45e1bdfe7f51.json  query-29d489a2df43fefbbd77974b16eec0815d6d0750b61b1bcaf31198c688320c54.json  query-2b72705ac35a75a3c4e983278b5909f0208692dd452833297b558659f8e4bfbd.json  query-30891760e129b8d1178d7b148bd06c7fd2c48707632dd67811bf29b592abd381.json  query-316b2510a8eaaf6462688b9dc847b0804d303238c81a5426475b00d3ce9d5fb1.json  query-3658c1b1bcad695bb5363daf01a4499b7d3fd2f4787795c01ed3dc7e3a7514d4.json  query-37b2897a30e6d42f2bf4176235210e9765fa1272d909f27d1c9a0bb1c3607445.json  query-3c55e0581cd4544e988c09c494ac4a76e5621b70d1f363d2b77eb0c9f158d21d.json  query-444ad3f8bac8d3e0612a5a330fe97c76d420767f0c8ead8ffc0e4f21755e8dd0.json  query-45b0c5363bfded1a4fd2945ad75b9d79209c91ddc97cfee6fd250c8efb474197.json  query-4c401f3e1f9207d3148afa50a44377e005ac907d0e6d25bfc277b894bfc6f1e9.json  query-4e7f67feb99f70dba186dc6e8bf28bfcda394ac0f5a1503cf59876d1cb8fbbd4.json  query-55fecc82170aef35db096799f98e8bf3f857d4c1757b9bf9eaa13ba77d79c4d6.json  (+46 more)
backend/migrations/: 001_init.sql  001_initial_database.sql  (+5 more)
(+32 files in other folders)
