[package]
name = "datalab-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3.1"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
parquet = { version = "56.2.0", features = ["async"] }
polars = { version = "0.51.0", features = ["lazy", "csv", "parquet"] }

[dev-dependencies]

